--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import "./variables/variables";
 
+
+@import "./base/header";
 @import "./base/hero";
 @import "./base/categories";
 @import "./modals/basket";
