--- a/sass/base/categories.scss
+++ b/sass/base/categories.scss
@@ -1,11 +1,23 @@
 .categories {
     padding: 15px 10px;
     background: #F2F2F3;
+    @media screen and (min-width: 768px) {
+        padding: 15px 10px 15px 64px;
+    }
+    @media screen and (min-width: 1024px) {
+        padding: 20px 0 25px 32px;
+    }
 
     &__container {
         display: flex;
         gap: 8px;
-        overflow: hidden;    
+        overflow: hidden; 
+        @media screen and (min-width: 768px) {
+            gap: 12px;
+        }
+        @media screen and (min-width: 1024px) {
+            gap: 24px;
+        }
     }
     &__menu {
         cursor: pointer;
@@ -16,15 +28,30 @@
         gap: 8px;
         background-color: #FFFFFF;
         border-radius: 50px;
-        height: 30px;    
+        height: 30px;  
+        transition: all 0.3s ease;
+        @media screen and (min-width: 1024px) {
+            padding: 0 14px;
+            height: 40px;  
+        }  
     }
-    &__menu:first-child {
-        background-color: #FFAB08;
+    &__menu:hover{
+        transition: all 0.3s ease;
+        background-color: #FF7020;
     }
+    
     &__menu-text {
         color: #000000;
         font-size: 12px;
         font-weight: 400;
         line-height: 16px;
     }
+    
+}
+// .categories__menu {
+//     transition: background-color 250ms ease-in-out; /* Плавное изменение фона */
+// }
+
+.categories__menu.active {
+    background-color: #FFAB08;
 }
