--- a/sass/base/food.scss
+++ b/sass/base/food.scss
@@ -2,29 +2,70 @@
     position: relative;
     padding: 15px 10px 80px 10px;
     background: #F2F2F3;
-
+    @media screen and (min-width: 768px) {
+        padding: 15px 64px 80px 64px;
+    }
+    @media screen and (min-width: 1024px) {
+        padding: 25px 32px 100px 32px;
+    }
     &__container {
+        display: flex;
+        flex-direction: column;
+        @media screen and (min-width: 1024px) {
+            flex-direction: row;
+            gap: 30px;
+        }
+    }
+    &__container-burger {
         margin-top: 30px;
+        @media screen and (min-width: 1024px) {
+            margin-top: 0;
+        }
     }
     &__title {
         font-size: 28px;
         font-weight: 600;
         line-height: 120%;
         color: #000000;
+        @media screen and (min-width: 1024px) {
+            font-size: 40px;
+        }
     }
     &__burger-list {
         margin-top: 16px;
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
+        @media screen and (min-width: 768px) {
+            gap: 20px;
+        }
+        @media screen and (min-width: 1024px) {
+            margin-top: 24px;
+            gap: 30px;
+        }
     }
     &__burger-item {
         padding: 4px;
         border-radius: 12px;
         background-color: #FFFFFF;
+        @media screen and (min-width: 1024px) {
+            padding: 12px;
+            border-radius: 18px;
+        }
+    }
+    &__burger-item:nth-child(n+5) {
+        display: none;
+        @media screen and (min-width: 768px) {
+            display: inline;
+        }
     }
     &__burger-img {
         border-radius: 8px;
+        @media screen and (min-width: 1024px) {            
+            border-radius: 12px;
+            width: 276px;
+            height: 220px;
+        }
     }
     &__burger-price {
         margin-top: 10px;
@@ -32,6 +73,10 @@
         font-weight: 600;
         line-height: 100%;
         color: #000000;
+        @media screen and (min-width: 1024px) {            
+            margin-top: 16px;
+            font-size: 24px;
+            }
     }
     &__burger-name {
         margin-top: 4px;
@@ -39,6 +84,10 @@
         font-weight: 400;
         line-height: 130%;  
         color: #000000;
+        @media screen and (min-width: 1024px) {            
+            margin-top: 8px;
+            font-size: 16px;
+            }
     }
     &__burger-weight {
         margin-top: 16px;
@@ -46,6 +95,10 @@
         font-weight: 600;
         line-height: 130%; 
         color: #B1B1B1; 
+        @media screen and (min-width: 1024px) {            
+            margin-top: 29px;
+            font-size: 16px;
+            }
     }
     &__burger-addbtn {
         cursor: pointer;
@@ -59,14 +112,210 @@
         font-size: 12px;
         font-weight: 400;
         line-height: 100%;
-        color: #000000;
-        
+        color: #000000;        
         transition: all 250ms ease-in-out;
-    
+        @media screen and (min-width: 1024px) {            
+            margin-top: 8px;
+            font-size: 16px;
+            border-radius: 12px;
+        }    
     }
     &__burger-addbtn:hover {
         color: #FFFFFF;
         background-color: #FF7020;
         transition: all 250ms ease-in-out;
     }
+
+
+    &__container-snacks {
+        margin-top: 30px;
+        @media screen and (min-width: 1024px) {
+            margin-top: 0;
+        }
+    }    
+    &__snacks-list {
+        margin-top: 16px;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        @media screen and (min-width: 768px) {
+            gap: 20px;
+        }
+        @media screen and (min-width: 1024px) {
+            margin-top: 24px;
+            gap: 30px;
+        }
+    }
+    &__snacks-item {
+        padding: 4px;
+        border-radius: 12px;
+        background-color: #FFFFFF;
+        @media screen and (min-width: 1024px) {
+            padding: 12px;
+            border-radius: 18px;
+        }
+    }
+    &__snacks-img {
+        border-radius: 8px;
+        @media screen and (min-width: 1024px) {            
+            border-radius: 12px;
+            width: 276px;
+            height: 220px;
+        }
+    }
+    &__snacks-price {
+        margin-top: 10px;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 100%;
+        color: #000000;
+        @media screen and (min-width: 1024px) {            
+            margin-top: 16px;
+            font-size: 24px;
+            }
+    }
+    &__snacks-name {
+        margin-top: 4px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 130%;  
+        color: #000000;
+        @media screen and (min-width: 1024px) {            
+            margin-top: 8px;
+            font-size: 16px;
+            }
+    }
+    &__snacks-weight {
+        margin-top: 16px;
+        font-size: 12px;
+        font-weight: 600;
+        line-height: 130%; 
+        color: #B1B1B1; 
+        @media screen and (min-width: 1024px) {            
+            margin-top: 29px;
+            font-size: 16px;
+            }
+    }
+    &__snacks-addbtn {
+        cursor: pointer;
+        padding: 11px;
+        margin-top: 7px;
+        width: 100%;
+        border: none;
+        border-radius: 8px;
+        background-color: #F2F2F3;
+        font-family: Nunito;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 100%;
+        color: #000000;        
+        transition: all 250ms ease-in-out; 
+        @media screen and (min-width: 1024px) {            
+            margin-top: 8px;
+            font-size: 16px;
+            border-radius: 12px;
+        }       
+    }
+    &__snacks-addbtn:hover {
+        color: #FFFFFF;
+        background-color: #FF7020;
+        transition: all 250ms ease-in-out;
+    }
+    &__container-hotdog {
+
+        margin-top: 30px;
+        @media screen and (min-width: 1024px) {
+            margin-top: 0;
+        }
+    }    
+    &__hotdog-list {
+        margin-top: 16px;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        @media screen and (min-width: 768px) {
+            gap: 20px;
+        }
+        @media screen and (min-width: 1024px) {
+            margin-top: 24px;
+            gap: 30px;
+        }
+    }
+    &__hotdog-item {
+        padding: 4px;
+        border-radius: 12px;
+        background-color: #FFFFFF;
+        @media screen and (min-width: 1024px) {
+            padding: 12px;
+            border-radius: 18px;
+        }
+    }
+    &__hotdog-img {
+        border-radius: 8px;
+        @media screen and (min-width: 1024px) {            
+            border-radius: 12px;
+            width: 276px;
+            height: 220px;
+        }
+    }
+    &__hotdog-price {
+        margin-top: 10px;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 100%;
+        color: #000000;
+        @media screen and (min-width: 1024px) {            
+            margin-top: 16px;
+            font-size: 24px;
+            }
+    }
+    &__hotdog-name {
+        margin-top: 4px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 130%;  
+        color: #000000;
+        @media screen and (min-width: 1024px) {            
+            margin-top: 8px;
+            font-size: 16px;
+            }
+    }
+    &__hotdog-weight {
+        margin-top: 16px;
+        font-size: 12px;
+        font-weight: 600;
+        line-height: 130%; 
+        color: #B1B1B1; 
+        @media screen and (min-width: 1024px) {            
+            margin-top: 29px;
+            font-size: 16px;
+            }
+    }
+    &__hotdog-addbtn {
+        cursor: pointer;
+        padding: 11px;
+        margin-top: 7px;
+        width: 100%;
+        border: none;
+        border-radius: 8px;
+        background-color: #F2F2F3;
+        font-family: Nunito;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 100%;
+        color: #000000;        
+        transition: all 250ms ease-in-out;
+        @media screen and (min-width: 1024px) {            
+            margin-top: 8px;
+            font-size: 16px;
+            border-radius: 12px;
+        }        
+    }
+    &__hotdog-addbtn:hover {
+        color: #FFFFFF;
+        background-color: #FF7020;
+        transition: all 250ms ease-in-out;
+    }
 }
+
+
