--- a/sass/base/hero.scss
+++ b/sass/base/hero.scss
@@ -2,32 +2,51 @@
     display: flex;
     flex-direction: column;
     align-items: center;      
-    padding: 22px 10px 15px 10px;    
+    padding: 11px 10px 15px 10px;    
     background-image: url(/images/bg.png); 
     background-repeat: no-repeat;
-    background-position: left 0 top -122px;
+    background-position: left 0 top -187px;
     background-size: 320px 611px; 
-    background-color: #F2F2F3;  
-
-    &__header {
-        display: flex;
-        gap: 7px;
-        align-items: center;
-        justify-content: center;
-    }
-    &__header-name {
-        text-align: center;
-        color: #FFFFFF;
-        font-size: 24px;
-        font-weight: 800;
-        line-height: 120%;
+    background-color: #F2F2F3; 
+    @media screen and (min-width: 768px) {
+        flex-direction: row-reverse;
+        align-items: normal;
+        gap: 10px;
+        padding: 11px 103px 15px 103px;
+        background-image: url(/images/bg768.png);    
+        background-position: left 0 top -112px;
+        background-size: 768px 378px; 
+    } 
+    @media screen and (min-width: 1024px) {
+        
+        gap: 1px;
+        padding: 11px 130px 20px 130px;
+        background-image: url(/images/bg1024.png);    
+        background-position: left 0 top -112px;
+        background-size: 1024px 474px; 
+    } 
+    &__title-box {
+        @media screen and (min-width: 768px) {
+            padding-top: 27px;
+        }
+        @media screen and (min-width: 1024px) {
+            padding-top: 46px;
+        }
     }
     &__title {
-        margin-top: 22px;
+        // margin-top: 22px;
         text-align: center;
         font-size: 30px;
         font-weight: 800;
         line-height: 120%;
+        color: #FFFFFF;
+        @media screen and (min-width: 768px) {
+            font-size: 36px;
+            text-align: start;
+        } 
+        @media screen and (min-width: 1024px) {
+            font-size: 50px;
+        } 
     }
     &__title-span {
         color: #FF5C00;
@@ -39,6 +58,14 @@
         text-align: center;
         color: #FFFFFF;
         margin-top: 16px;
+        @media screen and (min-width: 768px) {
+            margin-top: 26px;
+            text-align: start;
+        } 
+        @media screen and (min-width: 1024px) {
+            margin-top: 52px;
+            font-size: 16px;
+        } 
     }
     &__text-span {
         font-size: 12px;
@@ -54,9 +81,21 @@
         padding: 19px 25px 6px 25px;
         width: 227px;
         height: 229px;
+        @media screen and (min-width: 768px) {
+            margin-top: 0; 
+        } 
+        @media screen and (min-width: 1024px) {
+            width: 326px;
+            height: 326px;
+        }
     }
     &__img {
         width: 176.45px;
         height: 203.67px;
+        
+        @media screen and (min-width: 1024px) {
+            width: 253.41px;
+            height: 289.95px; 
+        } 
     }
 }
