--- a/sass/modals/basket.scss
+++ b/sass/modals/basket.scss
@@ -1,5 +1,9 @@
 .basket {
     position: relative;
+    @media screen and (min-width: 1024px) {
+        padding-top: 75px;
+        
+    }
     &__btn {
         cursor: pointer;
         width: 100%;
@@ -15,6 +19,12 @@
         font-size: 16px;
         font-weight: 600;
         line-height: 100%;
+        @media screen and (min-width: 768px) {
+            width: 145px;
+        }
+        @media screen and (min-width: 1024px) {
+            display: none;
+        }
     }
     
     &__total {
