--- a/sass/base/hero.scss
+++ b/sass/base/hero.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;      
     padding: 11px 10px 15px 10px;    
-    background-image: url(/images/bg.png); 
+    background-image: url(../images/bg.png); 
     background-repeat: no-repeat;
     background-position: left 0 top -187px;
     background-size: 320px 611px; 
@@ -13,7 +13,7 @@
         align-items: normal;
         gap: 10px;
         padding: 11px 103px 15px 103px;
-        background-image: url(/images/bg768.png);    
+        background-image: url(../images/bg768.png);    
         background-position: left 0 top -112px;
         background-size: 768px 378px; 
     } 
@@ -21,7 +21,7 @@
         
         gap: 1px;
         padding: 11px 130px 20px 130px;
-        background-image: url(/images/bg1024.png);    
+        background-image: url(../images/bg1024.png);    
         background-position: left 0 top -112px;
         background-size: 1024px 474px; 
     } 
