--- a/css/main.css
+++ b/css/main.css
@@ -463,7 +463,8 @@ button {
 .delivery-modal {
   position: relative;
   width: 320px;
-  height: 704px;
+  height: 650px;
+  box-sizing: border-box;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1001;
   /* Модальное окно поверх затемнения */ }
@@ -499,6 +500,7 @@ button {
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    box-sizing: border-box;
     padding: 32px 10px;
     background-color: #FFFFFF; }
     @media screen and (min-width: 768px) {
