--- a/sass/modals/delivery-modal.scss
+++ b/sass/modals/delivery-modal.scss
@@ -19,7 +19,8 @@
 .delivery-modal {
     position: relative;
     width: 320px;
-    height: 704px;
+    height: 650px;
+    box-sizing: border-box;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1001; /* Модальное окно поверх затемнения */
     @media screen and (min-width: 768px) {
@@ -59,6 +60,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    box-sizing: border-box;
     padding: 32px 10px;
     background-color: #FFFFFF;
     @media screen and (min-width: 768px) {
@@ -67,7 +69,6 @@
     }
     @media screen and (min-width: 1024px) {
         padding: 44px 24px 24px 24px;
-
         border-radius: 0 24px 24px 0;
         height: auto;
         }
