--- a/sass/base/food.scss
+++ b/sass/base/food.scss
@@ -8,6 +8,9 @@
     @media screen and (min-width: 1024px) {
         padding: 25px 32px 100px 32px;
     }
+    @media screen and (min-width: 1440px) {
+        padding: 25px 75px 100px 75px;
+    }
     &__container {
         display: flex;
         flex-direction: column;
@@ -18,6 +21,7 @@
     }
     &__container-burger {
         margin-top: 30px;
+        transition: all 0.9s ease;
         @media screen and (min-width: 1024px) {
             margin-top: 0;
         }
@@ -42,6 +46,9 @@
         @media screen and (min-width: 1024px) {
             margin-top: 24px;
             gap: 30px;
+        }
+        @media screen and (min-width: 1440px) {
+            margin-top: 36px;
         }
     }
     &__burger-item {
@@ -129,6 +136,7 @@
 
     &__container-snacks {
         margin-top: 30px;
+        transition: all 0.9s ease;
         @media screen and (min-width: 1024px) {
             margin-top: 0;
         }
@@ -222,7 +230,7 @@
         transition: all 250ms ease-in-out;
     }
     &__container-hotdog {
-
+        transition: all 0.9s ease;
         margin-top: 30px;
         @media screen and (min-width: 1024px) {
             margin-top: 0;
