--- a/sass/base/footer.scss
+++ b/sass/base/footer.scss
@@ -23,6 +23,9 @@
         @media screen and (min-width: 1024px) {
             padding: 48px 32px 40px 32px;
         }
+        @media screen and (min-width: 1440px) {
+            padding: 48px 211px 40px 75px;
+        }
     }
     &__container-box {
         @media screen and (min-width: 1024px) {
@@ -47,7 +50,10 @@
         @media screen and (min-width: 1024px) {
             margin-top: 0;
             gap: 50px;  
-        }  
+        } 
+        @media screen and (min-width: 1440px) {
+            gap: 126px;  
+        } 
     }
     &__contact {
         margin-top: 22px;
