--- a/sass/modals/basket.scss
+++ b/sass/modals/basket.scss
@@ -1,8 +1,10 @@
 .basket {
     position: relative;
     @media screen and (min-width: 1024px) {
-        padding-top: 75px;
-        
+        padding-top: 75px;        
+    }
+    @media screen and (min-width: 1440px) {
+        padding-top: 85px;        
     }
     &__btn {
         cursor: pointer;
