--- a/sass/modals/delivery-modal.scss
+++ b/sass/modals/delivery-modal.scss
@@ -23,15 +23,15 @@
     box-sizing: border-box;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1001; /* Модальное окно поверх затемнения */
-    @media screen and (min-width: 768px) {
-        width: 524px;
-        height: auto;
-    }
-    @media screen and (min-width: 1024px) {
-        display: flex;
-        width: 684px;
-        height: auto;
-    }
+        @media screen and (min-width: 768px) {
+            width: 524px;
+            height: auto;
+        }
+        @media screen and (min-width: 1024px) {
+            display: flex;
+            width: 684px;
+            height: auto;
+        }
     &__img-container {
         display: none;
         @media screen and (min-width: 1024px) {
@@ -46,13 +46,13 @@
     &__img-box {
         @media screen and (min-width: 1024px) {
             padding: 22px 52px;
-            }
+        }
     }
     &__img {
         @media screen and (min-width: 1024px) {
             width: 197px;
             height: 257px;
-            }
+        }
     }
     &__container {
     position: relative;
@@ -63,14 +63,15 @@
     box-sizing: border-box;
     padding: 32px 10px;
     background-color: #FFFFFF;
-    @media screen and (min-width: 768px) {
-        padding: 20px 16px 29px 16px;
-        border-radius: 24px;
-    }
-    @media screen and (min-width: 1024px) {
-        padding: 44px 24px 24px 24px;
-        border-radius: 0 24px 24px 0;
-        height: auto;
+        @media screen and (min-width: 768px) {
+            padding: 20px 16px 29px 16px;
+            border-radius: 24px;
+            height: 400px;
+        }
+        @media screen and (min-width: 1024px) {
+            padding: 44px 24px 24px 24px;
+            border-radius: 0 24px 24px 0;
+            height: auto;
         }
     }    
     &__title {
@@ -95,20 +96,18 @@
         line-height: 130%;
         background-color: #FFFFFF;
         color: #B1B1B1;
-        @media screen and (min-width: 768px) {
-            width: auto;
-            min-width: 300px;
-            font-size: 12px;
-
-        }
+            @media screen and (min-width: 768px) {
+                width: auto;
+                min-width: 300px;
+                font-size: 12px;
+            }
     }
     &__input-name:focus {
-        outline: 1px solid #000;
-        color: #000;
+        outline: 1px solid #FFAB08;
+        color: #000;        
     }
     &__input-tel {
-        box-sizing: border-box;  
-    
+        box-sizing: border-box;     
         padding: 12px;
         width: 100%;
         margin-top: 8px;
@@ -120,28 +119,26 @@
         line-height: 130%;
         background-color: #FFFFFF;
         color: #B1B1B1;
-        @media screen and (min-width: 768px) {
-            width: auto;
-            min-width: 300px;
-            font-size: 12px;
-
-        }
+            @media screen and (min-width: 768px) {
+                width: auto;
+                min-width: 300px;
+                font-size: 12px;
+            }
     }
     &__input-tel:focus {
-        outline: 1px solid #000;
+        outline: 1px solid #FFAB08;
         color: #000;
     }
     &__input2-container {
         display: flex;
         gap: 8px;
         margin-top: 8px;
-        @media screen and (min-width: 768px) {
-            margin-bottom: 24px;       
-        }
-        @media screen and (min-width: 1024px) {
-            margin-bottom: 32px;       
-
-        }
+            @media screen and (min-width: 768px) {
+                margin-bottom: 24px;       
+            }
+            @media screen and (min-width: 1024px) {
+                margin-bottom: 32px;       
+            }
     }
     &__input-address { 
         box-sizing: border-box;   
@@ -155,12 +152,12 @@
         line-height: 130%;
         background-color: #FFFFFF;
         color: #B1B1B1;
-        @media screen and (min-width: 1024px) {
-            font-size: 12px;
-        }
+            @media screen and (min-width: 1024px) {
+                font-size: 12px;
+            }
     }
     &__input-address:focus {
-        outline: 1px solid #000;
+        outline: 1px solid #FFAB08;
         color: #000;
     }
     &__input-address-num { 
@@ -175,39 +172,38 @@
         line-height: 130%;
         background-color: #FFFFFF;
         color: #B1B1B1;
-        @media screen and (min-width: 1024px) {
-            font-size: 12px;
-        }
+            @media screen and (min-width: 1024px) {
+                font-size: 12px;
+            }
     }
     &__input-address-num:focus {
-        outline: 1px solid #000;
+        outline: 1px solid #FFAB08;
         color: #000;
     }
     &__submit-btn {
         cursor: pointer;
         padding: 11px 32px;
         width: 100%;
-        border: 1px solid #FFAB08;
+        border: 1px solid #FF7020;
         border-radius: 8px;
         font-family: Nunito;
         font-size: 12px;
         font-weight: 400;
         line-height: 100%;
         color: #FFFFFF;
-        background-color: #FFAB08;
+        background-color: #FF7020;
         transition: all 250ms ease-in-out;
-        @media screen and (min-width: 768px) {
-            width: auto;
-            max-width: 300px;
-        }
-        @media screen and (min-width: 1024px) {
-            font-size: 16px;
-            border-radius: 12px;
-
-        }
+            @media screen and (min-width: 768px) {
+                width: auto;
+                max-width: 300px;
+            }
+            @media screen and (min-width: 1024px) {
+                font-size: 16px;
+                border-radius: 12px;
+            }
     }
     &__submit-btn:hover {
-        background-color: #FF7020;
+        background-color: #FFAB08;
         transition: all 250ms ease-in-out;
     }
     &__close-btn {
@@ -216,11 +212,10 @@
         right: 10px;
         width: 24px;
         height: 24px;
-        @media screen and (min-width: 1024px) {
-            top: 21px;
-            right: 21px;
-    
-        }
+            @media screen and (min-width: 1024px) {
+                top: 21px;
+                right: 21px;
+            }
     }
     &__close-icon {
         cursor: pointer;
@@ -238,17 +233,17 @@
     border: none;
     margin: 0;
     padding: 24px 10px;
-    @media screen and (min-width: 768px) {
-        padding: 16px 10px;
-    }
+        @media screen and (min-width: 768px) {
+            padding: 16px 10px;
+        }
 
     &__containers {
         display: flex;
         align-items: center;
         gap: 8px;
-        @media screen and (min-width: 768px) {
-            gap: 10px;
-        }
+            @media screen and (min-width: 768px) {
+                gap: 10px;
+            }
     }&__containers:first-child {
         margin-bottom: 8px;
     }
@@ -293,9 +288,9 @@
         font-weight: 400;
         line-height: 14px;
         color: #000000;
-        @media screen and (min-width: 1024px) {
-            font-size: 12px;
-        }
+            @media screen and (min-width: 1024px) {
+                font-size: 12px;
+            }
     }
 }
 
